<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="wook.song.s301047817.ui.home.WookFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_wook" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="wook.song.s301047817.ui.dashboard.SongFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_song" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="wook.song.s301047817.ui.notifications.S301047817Fragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_s301047817" />
</navigation>